update dependencies, add&address more warnings