@@ -70,9 +70,11 @@ object Settings {
     "-Xlint:type-parameter-shadow",  // A local type parameter shadows a type already in scope.
     "-Ywarn-dead-code",              // Warn when dead code is identified.
     "-Ywarn-numeric-widen",          // Warn when numerics are widened.
-    // "-Ywarn-unused:params",              // Warn if a value parameter is unused.
-    // "-Ywarn-unused:patvars",             // Warn if a variable bound in a pattern is unused.
-    // "-Ywarn-value-discard"               // Warn when non-Unit expression results are unused.
+    "-Ywarn-unused:params",          // Warn if a value parameter is unused.
+    // "-Ywarn-unused:patvars",      // Warn if a variable bound in a pattern is unused.
+    "-Ywarn-value-discard",          // Warn when non-Unit expression results are unused.
+    "-Xlint:nonlocal-return",        // A return statement used an exception for flow control.
+    // "-Xlint:eta-zero",            // Warn on ambiguity between applying f and eta expanding.
   )
   lazy val scalacOptions12plus: Seq[String] = Seq(
     // do not work on 2.11
@@ -103,10 +105,12 @@ object Settings {
     "-language:implicitConversions",
     "-Ysafe-init",
     "-print-tasty",
+    "-Wunused:all"
     // "-Yexplicit-nulls",
   )
 
   val strictCompile = Compile / compile / scalacOptions += "-Xfatal-warnings"
+  val strict        = scalacOptions += "-Xfatal-warnings"
 
   val legacyStgResolver =
     resolvers += ("STG old bintray repo" at "http://www.st.informatik.tu-darmstadt.de/maven/")
@@ -129,4 +133,9 @@ object Settings {
       publishLocal      := (if (`is 2.13`(scalaVersion.value)) publishLocal.value else {})
     )
 
+  val jolSettings = Seq(
+    javaOptions += "-Djdk.attach.allowAttachSelf",
+    fork := true,
+    libraryDependencies += Dependencies.jol.value
+  )
 }
